--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossbeam = "0.8"
+crossbeam       = "0.8"
 crossbeam-utils = "0.8.11"
+rdkafka         = "0.28.0"
+rand = "0.8.5"
+serde_json ="1.0.82"
+tokio = { version = "1.20.1", features = ["full"] }
+clap = { version="3.2.14" , features = ["derive"]}
