--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ rand = "0.8.5"
 serde_json ="1.0.82"
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version="3.2.14" , features = ["derive"]}
+log = "0.4.17"
+futures ="0.3.21"
