--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ rand = "0.8.5"
 serde_json ="1.0.82"
 clap = { version="3.2.14" , features = ["derive"]}
 log = "0.4.17"
+timer = "0.2.0"
+chrono = "0.4.19"
