--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ clap = { version="3.2.14" , features = ["derive"]}
 log = "0.4.17"
 timer = "0.2.0"
 chrono = "0.4.19"
+tokio = { version = "1.20.1", features = ["full"]}
